Implementing findAll users REST API. Adding method sort configuration in application.properties, adding hideGenerationTimestamp configuration in open-api-generator-plugin.
